# terminal

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.e2e  Makefile  README.md  docker-compose.yml  release.sh  run.sh
.github/workflows/: build-native.yml  release.yml  test.yml
crates/terminal-app/: Cargo.toml  tauri.conf.json
crates/terminal-app/capabilities/: default.json
crates/terminal-app/icons/: icon.icns
crates/terminal-app/src/: commands.rs  main.rs
crates/terminal-core/: Cargo.toml
crates/terminal-core/src/: config.rs  lib.rs  models.rs
crates/terminal-core/src/protocol/: v1.rs
crates/terminal-daemon/: Cargo.toml
crates/terminal-daemon/src/: claude_runner.rs  daemon_context.rs  dispatcher.rs  git_engine.rs  guards.rs  lib.rs  main.rs  parser.rs  persistence.rs  safety.rs  search_engine.rs  server.rs
crates/terminal-daemon/src/dispatchers/: git_dispatcher.rs  mod.rs  workspace_dispatcher.rs
crates/terminal-daemon/src/pty/: manager.rs  mod.rs
docs/: architecture.md  bin-cc.md  git-flow.md  keybindings.md  mcp.md  modes.md  naming-conventions.md  next-steps.md  panes.md  ux-conventions.md  workspaces.md
frontend/: .gitignore  TESTING.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: 01-connect.spec.ts  02-workspace.spec.ts  03-terminal.spec.ts  04-git.spec.ts  05-ai-run.spec.ts  README.md  fixtures.ts  global-setup.ts  global-teardown.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: ActivityBar.tsx  AppChrome.tsx  CommandPalette.tsx  DecisionPanel.test.tsx  DecisionPanel.tsx  DiffPanel.tsx  DirtyWarningModal.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  PostRunSummary.test.tsx  PostRunSummary.tsx  PromptComposer.test.tsx  PromptComposer.tsx  ResizeHandle.tsx  RunPanel.behavior.test.tsx  RunPanel.test.ts  RunPanel.tsx  SessionSidebar.tsx  ShortcutCheatsheet.tsx  SshConnectDialog.tsx  StashDrawer.tsx  StatusBar.tsx  ToastContainer.tsx  WelcomeScreen.tsx  WorkspaceSwitcher.tsx  runPanelFileLinks.ts
frontend/src/components/sidebar/: ChangesView.tsx  CommitHistoryItem.tsx  ExplorerView.tsx  FileTreeNode.tsx  GitView.tsx  SessionStrip.tsx  SidebarContainer.tsx
frontend/src/context/: AppContext.tsx  SendContext.tsx
frontend/src/core/: keybindings.ts  layoutPresets.ts  shortcutMap.ts
frontend/src/core/commands/: commandBus.test.ts  (+1 more)
frontend/src/hooks/: useWebSocket.test.ts  useWebSocket.ts
frontend/src/modes/: definitions.ts  registry.ts  types.ts
frontend/src/panes/: PaneRenderer.tsx  PaneSplitActions.tsx  registry.ts
frontend/src/state/: app-store.test.ts  app-store.ts  layout-persistence.ts  quickCommands.ts  sessionStore.ts  workspace-store.test.ts  workspace-store.ts
frontend/src/styles/: animations.css  themes.ts  tokens.css
frontend/src/types/: protocol.ts
frontend/src/util/: log.ts
scripts/: seed-test-repo.sh  validate-release-workflow.mjs
tests/: smoke.sh  ui_smoke.py
ui/: app.py
(+28 files in other folders)
