[package]
name = "terminal-daemon"
version.workspace = true
edition.workspace = true

[lib]
name = "terminal_daemon"
path = "src/lib.rs"

[[bin]]
name = "terminal-daemon"
path = "src/main.rs"

[dependencies]
terminal-core = { path = "../terminal-core" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
futures-util = "0.3"
rand = "0.8"
nix = { workspace = true }

[dev-dependencies]
tempfile = "3"
